[package]
name = "sleigh"
version = "0.1.0"
authors = ["Anciety <anciety@pku.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1"
pest_derive = "2.1"
serde = "1.0"
serde_derive = "1.0"
regex = "1.3"
